s8c2 reparation bug menu burer et amelioration du menu version mobile

--- a/sass/base/_h.scss
+++ b/sass/base/_h.scss
@@ -26,8 +26,8 @@ h2 {
 h3 {
     font-size: clamp(1rem, -2rem + 12.5vw, 2rem);
     text-align: center;
-    color: rgb(255, 255, 255);
-    font-weight: 300;
+    color: rgb(0, 0, 0);
+    font-weight: 5  00;
     font-style: oblique;
     padding: 20px;
 
